added first project

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: rgb(254, 255, 196);
-  padding: 10% 25% 5% 25%;
+  background-color: rgb(252, 248, 197);
+  padding: 10% 30% 5% 30%;
   font-family: "Roboto", sans-serif;
 }
 
@@ -20,7 +20,7 @@ h2 {
   margin-bottom: 0%;
 }
 
-p {
+p li {
   font-size: 1.25rem;
   color: #383636;
 }
@@ -37,6 +37,15 @@ form {
 .subtitle {
   color: #8a8a8a;
   line-height: 0;
+  margin-bottom: 40px;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: space-between;
+  max-width: 500px;
+  list-style-type: none;
+  padding: 0;
 }
 
 /* about */
@@ -49,7 +58,7 @@ form {
   border: 2px solid black;
   background-color: rgb(87, 87, 87);
   color: rgb(226, 226, 226);
-  font-size: 1.25rem;
+  font-size: 1rem;
   transition-duration: 0.4s;
 }
 
@@ -70,18 +79,37 @@ form {
 
 .skill-box {
   display: flex;
-  /* justify-content: space-between; */
 }
 
 input {
-  width: 350px;
   height: 25px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: #ffffff93;
+  padding: 7px 7px 7px 7px;
+  border: 2px solid #747474;
+  font-size: 1rem;
+}
+
+textarea {
+  width: 100%;
+  height: 250px;
+  margin-bottom: 10px;
+  resize: none;
+  background-color: #ffffff93;
+  padding: 7px 7px 7px 7px;
+  border: 2px solid #747474;
+  font-size: 1rem;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
 }
 
 .btn-submit {
   width: 80px;
+  float: right;
 }
 
 /* footer */
@@ -90,4 +118,22 @@ input {
   font-size: 1.25rem;
   margin-top: 20%;
   color: #747474;
+}
+
+a:link {
+  color: rgb(87, 87, 87);
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: rgb(87, 87, 87);
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
 }
