--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
 body {
-  background-color: rgb(252, 248, 197);
+  background-color: #f9f7f7;
   padding: 10% 30% 5% 30%;
   font-family: "Roboto", sans-serif;
+  color: #112d4e;
 }
 
 /* text */
@@ -22,7 +23,6 @@ h2 {
 
 p li {
   font-size: 1.25rem;
-  color: #383636;
 }
 
 section {
@@ -35,7 +35,7 @@ form {
 
 /* intro */
 .subtitle {
-  color: #8a8a8a;
+  color: #3f72af;
   line-height: 0;
   margin-bottom: 40px;
 }
@@ -55,9 +55,9 @@ form {
 
 .btn-shadow {
   height: 35px;
-  border: 2px solid black;
-  background-color: rgb(87, 87, 87);
-  color: rgb(226, 226, 226);
+  border: 2px solid #dbe2ef;
+  background-color: #dbe2ef;
+  color: #3f72af;
   font-size: 1rem;
   transition-duration: 0.4s;
 }
@@ -87,9 +87,6 @@ form {
   padding: 5px 5px 5px 5px;
   margin: 15px 0px 15px 0px;
   border-radius: 10px;
-}
-.project:hover {
-  background-color: rgba(80, 80, 80, 0.356);
 }
 
 .project-name {
