--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #f9f7f7;
   padding: 10% 30% 5% 30%;
@@ -92,6 +96,16 @@ form {
 .project-name {
   text-align: center;
   margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.project-links {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.project-links ~ a {
+  margin-top: 1000px;
 }
 
 input {
@@ -113,6 +127,7 @@ textarea {
   padding: 7px 7px 7px 7px;
   border: 2px solid #747474;
   font-size: 1rem;
+  font-family: "Roboto", sans-serif;
 }
 
 input:focus,
@@ -128,7 +143,7 @@ textarea:focus {
 /* footer */
 .footer {
   text-align: center;
-  font-size: 1.25rem;
+  font-size: 15px;
   margin-top: 20%;
   color: #747474;
 }
@@ -181,14 +196,11 @@ a:hover {
 
   input {
     width: 300px;
+    font-family: "Roboto", sans-serif;
   }
 
   textarea {
     width: 300px;
-  }
-
-  .footer {
-    font-size: 1rem;
   }
 }
 
