--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ form {
   background-color: #dbe2ef;
   color: #3f72af;
   font-size: 1rem;
-  transition-duration: 0.4s;
+  transition-duration: 0.3s;
 }
 
 .btn-shadow:hover {
@@ -83,6 +83,11 @@ form {
 
 .skill-box {
   display: flex;
+}
+
+.technology {
+  text-align: center;
+  font-weight: bold;
 }
 
 ul {
@@ -113,14 +118,30 @@ ul {
 
 /* projects */
 .project {
+  text-align: center;
   background-color: rgba(179, 179, 179, 0.356);
-  padding: 5px 5px 5px 5px;
-  margin: 15px 0px 15px 0px;
+  padding: 10px 15px 15px 15px;
+  margin: 15px 0px 40px 0px;
   border-radius: 10px;
 }
 
-.project:hover {
-  background-color: #dbe2ef;
+.project1-color {
+  background-image: linear-gradient(rgb(158, 244, 255), rgb(102, 159, 212));
+}
+
+.project2-color {
+  background-image: linear-gradient(rgb(240, 239, 183), rgb(233, 221, 57));
+}
+
+.project-img {
+  border-radius: 7px;
+  width: 95%;
+  transition-duration: 0.3s;
+}
+
+.project-img:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.521),
+    0 17px 50px 0 rgba(0, 0, 0, 0.384);
 }
 
 .project-name {
@@ -129,9 +150,8 @@ ul {
   margin-bottom: 5px;
 }
 
-.project-links {
-  text-align: center;
-  margin-bottom: 20px;
+.project-text {
+  text-align: left;
 }
 
 input {
@@ -187,7 +207,7 @@ a:visited {
 }
 
 a:hover {
-  color: red;
+  color: rgb(163, 52, 207);
   background-color: transparent;
   text-decoration: underline;
 }
