--- a/styles/style.css
+++ b/styles/style.css
@@ -4,13 +4,14 @@ html {
 
 body {
   background-color: #f9f7f7;
-  padding: 10% 30% 5% 30%;
+  padding: 5% 30% 5% 30%;
   font-family: "Roboto", sans-serif;
   color: #112d4e;
 }
 
 /* text */
 h1 {
+  margin-top: 10px;
   margin-bottom: 0%;
   font-size: 3.5rem;
   line-height: 0.75;
@@ -30,7 +31,7 @@ p li {
 }
 
 section {
-  padding-bottom: 20%;
+  padding-bottom: 8%;
 }
 
 form {
@@ -126,12 +127,16 @@ ul {
   border-radius: 10px;
 }
 
+.project2-color {
+  background-image: linear-gradient(#75c06ca0, #377d1ba0);
+}
+
 .project1-color {
   background-image: linear-gradient(rgb(158, 244, 255), rgb(102, 159, 212));
 }
 
-.project2-color {
-  background-image: linear-gradient(rgb(240, 239, 183), rgb(233, 221, 57));
+.project3-color {
+  background-image: linear-gradient(rgb(230, 229, 155), rgb(224, 215, 86));
 }
 
 .project-img {
