--- a/styles/style.css
+++ b/styles/style.css
@@ -106,6 +106,10 @@ ul {
   margin-right: 0.3rem;
 }
 
+.it-list li:before {
+  background-color: rgb(199, 82, 46);
+}
+
 .language-list li:before {
   background-color: rgb(0, 97, 224);
 }
